// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ManyOfAnt should render a select control by default 1`] = `
<span>
  <ForwardRef(InternalSelect)
    data-testid="Id.manyOf"
    disabled={false}
    id="id-many_of"
    label="Choose your snack"
    onChange={[Function]}
    placeholder="Please select"
    readOnly={false}
    value={Array []}
  >
    <Option
      data-testid="id-many_of-b"
      key="b"
      value="b"
    >
      Banana
    </Option>
    <Option
      data-testid="id-many_of-a"
      key="a"
      value="a"
    >
      Apples
    </Option>
    <Option
      data-testid="id-many_of-p"
      key="p"
      value="p"
    >
      Peaches
    </Option>
  </ForwardRef(InternalSelect)>
</span>
`;

exports[`ManyOfCheckboxAnt should render a checkboxes by default 1`] = `
<Memo(ForwardRef(InternalCheckboxGroup))
  data-testid="Id.manyOf"
  disabled={false}
  id="id-many_of"
  label="Choose your snack"
  onChange={[Function]}
  readOnly={false}
  value={Array []}
>
  <Row>
    <Col
      key="b"
    >
      <Checkbox
        data-testid="id-many_of-b"
        value="b"
      >
        Banana
      </Checkbox>
    </Col>
    <Col
      key="a"
    >
      <Checkbox
        data-testid="id-many_of-a"
        value="a"
      >
        Apples
      </Checkbox>
    </Col>
    <Col
      key="p"
    >
      <Checkbox
        data-testid="id-many_of-p"
        value="p"
      >
        Peaches
      </Checkbox>
    </Col>
  </Row>
</Memo(ForwardRef(InternalCheckboxGroup))>
`;

exports[`ManyOfFormAnt should render a checkboxes by default 1`] = `
<Memo(observerComponent)
  operation="bound ManyOfImpl"
>
  <Memo(observerComponent)
    disabled={false}
    id="id-many_of"
    operation="bound ManyOfImpl"
    readOnly={false}
  />
</Memo(observerComponent)>
`;
